--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,17 @@
+certifi==2019.9.11
+chardet==3.0.4
+dj-database-url==0.5.0
 Django==2.2.5
 django-crispy-forms==1.7.2
-pytz==2019.2
-sqlparse==0.3.0
-dj-database-url==0.5.0
+django-mathfilters==0.4.0
+djangorestframework==3.10.3
 gunicorn==19.9.0
+idna==2.8
 psycopg2==2.7.5
+python-memcached==1.59
+pytz==2019.2
+requests==2.22.0
+six==1.12.0
+sqlparse==0.3.0
+urllib3==1.25.6
 whitenoise==4.0
